# SprocketStats

./: .gitignore  .pylintrc  CONTRIBUTING.md  HANDBOOK.md  LICENSE  LICENSE.md  NOTICE.md  README.md  ROADMAP.md  render.yaml  run.py  temp.py
.github/workflows/: pylint.yml
.run/: main.run.xml  run dev.run.xml  run prod.run.xml  run_dev.run.xml
Microsoft/Windows/PowerShell/: ModuleAnalysisCache
analysis/: .env  .pylintrc  build.spec  main.py  requirements.txt
analysis/seasons/2025/: calculator.py  steps.py
analysis/seasons/2026/: calculator.py  functions.py
backend/: .env.example  .pylintrc  db.py  endpoints.py  enums.py  main.py  populate.py  pyproject.toml  requirements.txt  statbot_db.py  tba_db.py
backend/endpoints/: admin.py  attendance.py  auth.py  cron.py  data.py  general.py  match_scouting.py  pit_scouting.py  push_notification.py
backend/seasons/2025/: translator.py
backend/seasons/2026/: translator.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts
frontend/api/: version.js  version.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/public/teams/: event_names.json  populate.py  populate_teams.py  team_names.json
frontend/src/: App.tsx  index.css  main.tsx  sw.js
kiosk/: README.md
kiosk/kiosk-avalonia/: .gitignore  kiosk-avalonia.sln
kiosk/kiosk-fastapi/: build.spec  main.py  requirements.txt  run.py  runnable_functions.py
kiosk/kiosk-wpf/: .gitignore
kiosk/kiosk-wpf-python/: kiosk-wpf-python.sln
kiosk/kiosk-wpf-pythonnet/: kiosk-wpf.sln
(+175 files in other folders)
